Fixing a minor problem in the lines alignement

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -331,8 +331,8 @@ position: relative ;
     content: "";
     position: absolute;
     top: 2rem ; 
+    left: 0;
     width: 100%;
-    transform: translateX(-42%);
     height: 2px;
     background-color: var(--color-grey-0);
     
